tests/NormalTests/paczka1/small_fuzzy/97725770.err
Error in line 2: BikZR S113 85,8
Error in line 12: L0gG6ibbQoz S113 34,4
Error in line 13: L0gG6ibbQoz S221 635,6
